--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,33 @@
-torch
-torchvision
-numpy
-opencv-python
-matplotlib
-scikit-learn
-tqdm
-notebook
+# Deep Learning & Computer Vision
+torch>=2.0.0
+torchvision>=0.15.0
+numpy>=1.24.0
+opencv-python>=4.8.0
+Pillow>=10.0.0
+
+# Scientific Computing
+scipy>=1.11.0
+scikit-learn>=1.3.0
+PyWavelets>=1.4.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+pandas>=2.0.0
+
+# Web Application
+Flask>=2.3.0
+Werkzeug>=2.3.0
+
+# Progress & Utilities
+tqdm>=4.65.0
+
+# Development Tools
+notebook>=7.0.0
+jupyter>=1.0.0
+jupyterlab>=4.0.0
+
+# Additional utilities
+imageio>=2.31.0
+imageio-ffmpeg>=0.4.9
+
